# Space-Invader

./:  README.md  MODIFICATIONS.md  Makefile  README.md  checkproject.sh  checkptoject.sh  fullcheck_output.txt  generate_big_invader_v2  notes.txt  oldmakefile  rapport.docx  rapport.md  script_video.txt  space_invaders  space_invaders_ncurses  space_invaders_sdl  test_audio  tool_big_invader  valgrind.supp  video_script_v2.md  video_script_v2_fr.md
html/: doxygen_crawl.html  md_MODIFICATIONS.html  md_README.html  navtreedata.js  navtreeindex0.js  pages.html
html/search/: all_10.js  all_15.js  all_16.js  all_17.js  all_7.js  all_c.js  pages_0.js  pages_1.js  pages_11.js  pages_12.js  pages_13.js  pages_14.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  pages_6.js  pages_8.js  (+7 more)
latex/: md_MODIFICATIONS.tex  md_README.tex  refman.tex
reports/: valgrind-ncurses-rapport.txt  valgrind-sdl-rapport.txt
src/: main.c  main_ncurses.c  main_sdl.c
testl/: platform_ncurses.c  text.txt
tests/: CMakeLists.txt  Makefile  run_tests.sh
tests/include/: mock_platform.h  test_utils.h
tests/src/: mock_platform.c  test_controller.c  test_game_state.c  test_input_handler.c  test_main.c  test_model.c
tools/: a.out  assets  assets_gen.c  generate_action_music.py  generate_additional_audio.py  generate_big_invader.c  generate_big_invader_v2  generate_big_invader_v2.c  generate_boss.c  generate_bullets.c  generate_enhanced_audio.py  generate_invader2.c  generate_invader3.c  generate_saucer.c  generate_sounds.py  generate_spaceship.c  genrate_invader1.c  invader1  test_audio.c
(+25 files in other folders)
